--- a/butwehavethepower/README
+++ b/butwehavethepower/README
@@ -6,7 +6,6 @@ CS 120 Tufts University
 Author: Yingyang Liang
 Collaborators: -
 
-Hours spent: ~3h
-Start time: Jun 11 15:34
-        16:12 stop
-        17:57 start
+Correctly implemented video captioning.
+
+Hours spent: 2h
