working as intended

--- a/notuber/README
+++ b/notuber/README
@@ -1,15 +1,38 @@
 # Overview
 Lab 8: Ride Hailing 1
-
 CS 120 Tufts University
+Jun 13, 2021
 
 Author: Yingyang Liang
 Collaborators: -
 
-Implementation:
+## Implementation:
+Correctly implemented webpage displaying a Google map of vehicles of certain
+positions.
 
-Hours spent:
+## Before Optimisation:
+Lighthouse metrics
+--------------------
+First contentful paint | .2s
+Time to interactive | .7s
+Speed index | .8s
+Largest contentful paint | 1.1s
+
+### Network metrics:
+1.1MB transferred
+1.7MB resources
+Finish: 1.08s
+Load: 547ms
+
+### File Sizes:
+index.html: 469B
+style.css: 280B
+index.js: 1.4kB
+
+
+### Hours spent:
 Start Jun 11 20:22
 Stop 20:42
 start 11:19
 stop 11:58
+start: 00:50
